--- a/2021/october/osconf21/mysql/templates/ns.yaml
+++ b/2021/october/osconf21/mysql/templates/ns.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: mysql
+  name: {{ .Values.mysql.namespace }}
   labels:
-    app: {{ .Values.label }}
+    app: {{ .Values.mysql.label }}
