--- a/2021/october/osconf21/mysql/templates/service.yaml
+++ b/2021/october/osconf21/mysql/templates/service.yaml
@@ -2,15 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.label }}
-  name: mysql
-  namespace: mysql
+    app: {{ .Values.mysql.label }}
+  name: {{ .Values.mysql.name }}
+  namespace: {{ .Values.mysql.namespace }}
 spec:
   ports:
-  - name: {{ .Values.ports.source }}-{{ .Values.ports.target }}
-    port: {{ .Values.ports.source }}
+  - name: {{ .Values.mysql.ports.source }}-{{ .Values.mysql.ports.target }}
+    port: {{ .Values.mysql.ports.source }}
     protocol: TCP
-    targetPort: {{ .Values.ports.target }}
+    targetPort: {{ .Values.mysql.ports.target }}
   selector:
     app: mysql
   sessionAffinity: None
