--- a/2021/october/osconf21/mysql/templates/service.yaml
+++ b/2021/october/osconf21/mysql/templates/service.yaml
@@ -12,6 +12,6 @@ spec:
     protocol: TCP
     targetPort: {{ .Values.mysql.ports.target }}
   selector:
-    app: mysql
+    app: {{ .Values.mysql.label }}
   sessionAffinity: None
   type: ClusterIP
