Added PreUpgrade, PostUpgrade, PostRollback, PostDelete tasks

--- a/2021/october/osconf21/mysql/templates/deployment.yaml
+++ b/2021/october/osconf21/mysql/templates/deployment.yaml
@@ -34,4 +34,4 @@ spec:
       volumes:
       - name: data
         hostPath:
-          path: {{ .Values.mysql.hostPath.path }}   
+          path: {{ .Values.mysql.hostPath.db.path }}   
