--- a/2021/october/osconf21/mysql/values.yaml
+++ b/2021/october/osconf21/mysql/values.yaml
@@ -11,16 +11,49 @@ mysql:
     name: post-install-db-init
     image:
       name: developersthought/post-install-db-init
-      tag: latest
-      pullPolicy: Always  
+      tag: 1.0.0
+      pullPolicy: IfNotPresent
+  postDelete:
+    namespace: default
+    name: post-delete-clean-host-path
+    image:
+      name: alpine
+      tag: 3.13.6
+      pullPolicy: IfNotPresent
+  preUpgrade:
+    name: pre-upgrade-take-backup
+    image:
+      name: databack/mysql-backup
+      tag: 8b7f6338d7af6a008d20c986b862a99310eb237d
+      pullPolicy: IfNotPresent
+    dbDumpPath: /db
+  postUpgrade:
+    name: post-upgrade-add-data
+    image:
+      name: developersthought/post-upgrade-add-data
+      tag: 1.0.0
+      pullPolicy: IfNotPresent
+  postRollback:
+    name: post-rollback-restore-data
+    image:
+      name: databack/mysql-backup
+      tag: 8b7f6338d7af6a008d20c986b862a99310eb237d
+      pullPolicy: IfNotPresent
+    dbDumpPath: /db
+    backupFile: mysql-backup.gz         
   image:
     name: mysql
-    tag: latest
-    pullPolicy: Always
+    tag: 8.0.26
+    pullPolicy: IfNotPresent
   password: admin
   user: root
   ports:
     source: 3306
     target: 3306
   hostPath:
-    path: /root/db-data
+    db:
+      path: /root/db-data
+    backup:
+      path: /root/share
+    scripts:
+      path: /root/scripts   
